syntax = "proto3";

package helloworld;

option go_package = "github.com/yinghanhung/grpc-polyglot/routing/proto/go/helloworld";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings and server info.
message HelloReply {
  string message = 1;
  string server_name = 2;
  string server_version = 3;
  string architecture = 4;
}
